<resources>
    <string name="app_name">My Application</string>
    <string name="monthListBtn">＜2022年10月</string>
    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="dish">料理名</string>
    <string name="calorie">カロリー</string>
    <string name="dishHint">料理名を記入</string>
    <string name="calorieHint">摂取カロリーを記入</string>
    <string name="keepBtn">保存</string>
    <string name="morning">朝</string>
    <string name="noon">昼</string>
    <string name="night">夜</string>
    <string name="delete">カロリーを削除</string>
</resources>